force-app/main/default/objects/Community_News__c/Community_News__c.object-meta.xml
<CustomObject>
    <description>This object stores News stories (links or text content) that are published to the Community.</description>
    <label>Community News</label>
    <nameField>
        <displayFormat>News.{yy}{mm}{0}</displayFormat>
        <label>News</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>