force-app/main/default/objects/Community_News__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>determines if a news item will be an alert that appears at top of page</description>
    <label>Alert</label>
    <type>Checkbox</type>
</CustomField>