force-app/main/default/objects/Community_News__c/fields/Allow_Comments__c.field-meta.xml
<CustomField>
    <fullName>Allow_Comments__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When selected, Community Users will be allowed to post Comments on a news article as long as the Comment Expiration has not passed.</description>
    <inlineHelpText>When selected, Community Users will be allowed to post Comments on a news article as long as the Comment Expiration has not passed.</inlineHelpText>
    <label>Allow Comments</label>
    <type>Checkbox</type>
</CustomField>