force-app/main/default/objects/Community_News__c/fields/Comment_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Comment_Expiration_Date__c</fullName>
    <description>Represents the Date/Time when the News Article prevents new comments from being added to the News Article.  The Time is based on the Organizations Time Zone listed in Salesforce.</description>
    <inlineHelpText>Represents the Date/Time when the News Article prevents new comments from being added to the News Article.  The Time is based on the Organizations Time Zone listed in Salesforce.</inlineHelpText>
    <label>Comment Expiration Date</label>
    <type>DateTime</type>
</CustomField>