force-app/main/default/objects/Community_News__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Represents the full text description of the news article that will be displayed in the Community Portal.</description>
    <inlineHelpText>Represents the full text description of the news article that will be displayed in the Community Portal.</inlineHelpText>
    <label>Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>