force-app/main/default/objects/Community_News__c/fields/Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date__c</fullName>
    <description>Represents the Date/Time when the News Article will be posted in the Community Portal.  This will be based on the Organizations Time Zone in Salesforce.</description>
    <inlineHelpText>Represents the Date/Time when the News Article will be posted in the Community Portal.  This will be based on the Organizations Time Zone in Salesforce.</inlineHelpText>
    <label>Entry Date</label>
    <type>DateTime</type>
</CustomField>