force-app/main/default/objects/Community_News__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Represents the Date/Time when the News Article will be removed from the Community Portal.  The time will be based on the Organizations Time Zone in Salesforce.</description>
    <inlineHelpText>Represents the Date/Time when the News Article will be removed from the Community Portal.  The time will be based on the Organizations Time Zone in Salesforce.</inlineHelpText>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>