force-app/main/default/objects/Community_News__c/fields/Feature_on_Home_Page_Slot__c.field-meta.xml
<CustomField>
    <fullName>Feature_on_Home_Page_Slot__c</fullName>
    <description>Use this field if this record will be featured on the Home Page.  The selected value will determine the order of this item in the Campus Updates section.</description>
    <label>Feature on Home Page - Slot #</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>