force-app/main/default/objects/Community_News__c/fields/Image_Path__c.field-meta.xml
<CustomField>
    <fullName>Image_Path__c</fullName>
    <description>Indicates the path where the image is stored and pulled from to display in the Community Portal.</description>
    <inlineHelpText>Indicates the path where the image is stored and pulled from to display in the Community Portal.</inlineHelpText>
    <label>Image Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>