force-app/main/default/objects/Community_News__c/fields/Make_Entry_Sticky__c.field-meta.xml
<CustomField>
    <fullName>Make_Entry_Sticky__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the News Article will always appear at the top of the News Article Listed.  If multiple active Sticky, articles will be listed in Descending Order by Entry Date field.</description>
    <inlineHelpText>When selected, the News Article will always appear at the top of the News Article Listed.  If multiple active Sticky, articles will be listed in Descending Order by Entry Date field.</inlineHelpText>
    <label>Make Entry Sticky</label>
    <type>Checkbox</type>
</CustomField>