force-app/main/default/objects/Community_News__c/fields/News_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>News_SF_ID__c</fullName>
    <description>Represents the 18 digit Salesforce Unique ID of the News record.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the 18 digit Salesforce Unique ID of the News record.</inlineHelpText>
    <label>News SF ID</label>
    <type>Text</type>
</CustomField>