force-app/main/default/objects/Community_News__c/fields/Teaser__c.field-meta.xml
<CustomField>
    <fullName>Teaser__c</fullName>
    <description>Represents a short description of the News article that will be posted in the Community Portal.</description>
    <inlineHelpText>Represents a short description of the News article that will be posted in the Community Portal.</inlineHelpText>
    <label>Teaser</label>
    <type>TextArea</type>
</CustomField>