force-app/main/default/objects/Community_News__c/fields/TEST_URL__c.field-meta.xml
<CustomField>
    <fullName>TEST_URL__c</fullName>
    <description>TEST - DO NOT PACKAGE</description>
    <label>TEST URL</label>
    <type>Url</type>
</CustomField>