force-app/main/default/objects/Community_News__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Represents the title of the news that will be displayed in the Community Portal.</description>
    <inlineHelpText>Represents the title of the news that will be displayed in the Community Portal.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>