force-app/main/default/objects/Community_News__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Indicates the type of news that is being added.  Internal represents a news article pasted into Salesforce and an External would be a link to an article posted somewhere on the internet.</description>
    <inlineHelpText>Indicates the type of news that is being added.  Internal represents a news article pasted into Salesforce and an External would be a link to an article posted somewhere on the internet.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>