force-app/main/default/objects/Community_News__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Allows a hyperlink to be provided for an External news story.</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>