force-app/main/default/objects/Community_News__c/validationRules/Alert_cannot_have_Home_Page_Slot.validationRule-meta.xml
<ValidationRule>
    <fullName>Alert_cannot_have_Home_Page_Slot</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Alert__c ,
 NOT(ISBLANK(TEXT( Feature_on_Home_Page_Slot__c )))
)</errorConditionFormula>
    <errorMessage>If a news item is tagged as an Alert, it should not have a value for home page slot number</errorMessage>
</ValidationRule>