force-app/main/default/objects/Community_News__c/validationRules/Teaser_required_for_Internal.validationRule-meta.xml
<ValidationRule>
    <fullName>Teaser_required_for_Internal</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &#39;Internal&#39; ) &amp;&amp; ISBLANK( Teaser__c )</errorConditionFormula>
    <errorMessage>You must populate the Teaser for an Internal story</errorMessage>
</ValidationRule>