force-app/main/default/objects/Community_News__c/validationRules/URL_required_for_External.validationRule-meta.xml
<ValidationRule>
    <fullName>URL_required_for_External</fullName>
    <active>true</active>
    <description>If the News Type is External, the URL is required.</description>
    <errorConditionFormula>ISPICKVAL( Type__c , &#39;External&#39; ) &amp;&amp; ISBLANK( URL__c )</errorConditionFormula>
    <errorMessage>You must populate the URL for an External story</errorMessage>
</ValidationRule>