force-app/main/default/objects/Community_News__c/listViews/Alerts_Active.listView-meta.xml
<ListView>
    <fullName>Alerts_Active</fullName>
    <booleanFilter>(1 AND 2) or (1 and 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Alert__c</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <columns>Teaser__c</columns>
    <columns>Entry_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Alert__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Alerts - Active</label>
    <language>en_US</language>
</ListView>