force-app/main/default/objects/Community_News__c/listViews/Alerts_Archived.listView-meta.xml
<ListView>
    <fullName>Alerts_Archived</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <columns>Teaser__c</columns>
    <columns>Entry_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Alert__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Alerts - Archved</label>
    <language>en_US</language>
</ListView>