force-app/main/default/objects/Community_News__c/listViews/All_News_Active.listView-meta.xml
<ListView>
    <fullName>All_News_Active</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Teaser__c</columns>
    <columns>Type__c</columns>
    <columns>Alert__c</columns>
    <columns>Feature_on_Home_Page_Slot__c</columns>
    <columns>Entry_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Make_Entry_Sticky__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entry_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>All News - Active</label>
    <language>en_US</language>
</ListView>